--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -3,7 +3,7 @@
     "nde": "Netwerk Digitaal Erfgoed",
     "messageFooter": "Het Termennetwerk is het resultaat van de samenwerking binnen het Netwerk Digitaal Erfgoed, in samenwerking met CLARIAH, en wordt beheerd en onderhouden door de Rijksdienst voor het Cultureel Erfgoed.",
     "privacy": "Privacyverklaring",
-    "general.volg": "Volg het Netwerk Digitaal Erfgoed via"
+    "volg": "Volg het Netwerk Digitaal Erfgoed via"
   },
   "faq": {
     "title": "Veelgestelde vragen",
