added isSearching animation
included responseTime changes
corrected typo
changes look of homepage (css)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,7 +51,8 @@
     "relatedTerm": "Related term | Related terms",
     "copyUri": "Copy URI",
     "viewAtSource": "View at source",
-    "sourceNotFound": "No terminology source can provide this URI"
+    "sourceNotFound": "No terminology source can provide this URI",
+    "termFound": "Found term"
   },
   "language": {
     "label": "Taal"
