--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -66,7 +66,7 @@
   },
   "termSources": {
     "title": "List of terminology sources",
-    "selectGenres": "Select one or more genres:",
+    "selectGenres": "Select one or more subjects:",
     "matchingSources": "no matching sources | {n} matching source | {n} matching sources",
     "search": "Search in these sources",
     "intro": "This is the list of terminology sources that you can consult through the Network of Terms."
