feat: Translate catalog

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
     "voor_b": "for administrators of terminology sources",
     "voor_o": "for heritage software developers",
     "voor_r": "for terminology source providers",
+    "reconciliation": "Reconciliation",
     "title_b":"Frequently Asked Questions about the Network of Terms for managers of heritage collections",
     "title_c":"Frequently asked questions about the Network of Terms for collection administrators at heritage institutions",
     "title_o":"Frequently Asked Questions about the Network of Terms for heritage software developers",
