--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -70,7 +70,10 @@
     "selectGenres": "Selecteer een of meer onderwerpen:",
     "matchingSources": "geen overeenkomstige bronnen | {n} overeenkomstige bron | {n} overeenkomstige bronnen",
     "search": "Zoeken in deze bronnen",
-    "intro": "Dit is de lijst van terminologiebronnen die je via het Termennetwerk kunt raadplegen."
+    "intro": "Dit is de lijst van terminologiebronnen die je via het Termennetwerk kunt raadplegen.",
+    "availableInLanguages": "Beschikbaar in talen",
+    "genres": "Onderwerpen",
+    "reconciliationUrl": "Reconciliatie-URL"
   },
   "api": {
     "ServerError": "De terminologiebron kon de vraag niet verwerken",
