fix: improve error message translations and FAQ explanations
* Distinguish between ServerError (source unavailable) and TimeoutError (slow response)
* Add separate FAQ sections for TimeoutError in both Dutch and English FAQs
* Update error message links to point to correct FAQ anchors
* Add links to sources page for contacting source providers

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,8 +76,8 @@
     "reconciliationUrl": "Reconciliation URL"
   },
   "api": {
-    "ServerError": "The terminology source could not process the request",
-    "TimeoutError": "The terminology source is temporarily unavailable",
+    "ServerError": "The terminology source is unavailable",
+    "TimeoutError": "The terminology source did not respond in time",
     "NotFoundError": "No term found with this URI",
     "Error": "An error occurred"
   }
