--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,8 @@
     "nde": "Dutch Digital Heritage Network",
     "messageFooter": "The Network of Terms is the result of collaboration within the Digital Heritage Network, in collaboration with CLARIAH, and is managed and maintained by the Cultural Heritage Agency of the Netherlands.",
     "privacy": "Privacy statement",
-    "volg": "Follow the Digital Heritage Network via"
+    "volg": "Follow the Digital Heritage Network via",
+    "news": "News"
   },
   "faq": {
     "title": "Frequently asked questions",
