feat: display URI with copy button in terminology sources list
* Add URI row to each terminology source entry
* Include copy-to-clipboard button for easy URI copying
* Add translation for URI label in both NL and EN locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,6 +74,7 @@
     "intro": "This is the list of terminology sources that you can consult through the Network of Terms.",
     "availableInLanguages": "Available in languages",
     "genres": "Subjects",
+    "uri": "URI",
     "reconciliationUrl": "Reconciliation URL"
   },
   "api": {
