feat: add status link to navigation and footer
* Add Status link in navigation after News
* Add Status link with external icon in footer
* Add translation for status label in NL and EN locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,8 @@
     "messageFooter": "The Network of Terms is the result of collaboration within the Digital Heritage Network, in collaboration with CLARIAH, and is managed and maintained by the Cultural Heritage Agency of the Netherlands.",
     "privacy": "Privacy statement",
     "volg": "Follow the Digital Heritage Network via",
-    "news": "News"
+    "news": "News",
+    "status": "Status"
   },
   "faq": {
     "title": "Frequently asked questions",
