--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -4,7 +4,8 @@
     "messageFooter": "Het Termennetwerk is het resultaat van de samenwerking binnen het Netwerk Digitaal Erfgoed, in samenwerking met CLARIAH, en wordt beheerd en onderhouden door de Rijksdienst voor het Cultureel Erfgoed.",
     "privacy": "Privacyverklaring",
     "volg": "Volg het Netwerk Digitaal Erfgoed via",
-    "news": "Nieuws"
+    "news": "Nieuws",
+    "status": "Status"
   },
   "faq": {
     "title": "Veelgestelde vragen",
