feat: add documentation link to footer
* Add external link to docs.nde.nl/services/network-of-terms/
* Add translation for documentation label in NL and EN locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,8 @@
     "privacy": "Privacy statement",
     "volg": "Follow the Digital Heritage Network via",
     "news": "News",
-    "status": "Status"
+    "status": "Status",
+    "documentation": "Documentation"
   },
   "faq": {
     "title": "Frequently asked questions",
