--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -5,7 +5,8 @@
     "privacy": "Privacyverklaring",
     "volg": "Volg het Netwerk Digitaal Erfgoed via",
     "news": "Nieuws",
-    "status": "Status"
+    "status": "Status",
+    "documentation": "Documentatie"
   },
   "faq": {
     "title": "Veelgestelde vragen",
