feat: display source availability status in dropdown and sources list
* Add filled/empty circle indicators (●/○) to show source availability
* Display status in dataset dropdown with colour-coded circles
* Add status badges with circle prefix to terminology sources list
* Include SourceStatus type and GraphQL query updates
* Add translations for availability status labels

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,7 +77,10 @@
     "availableInLanguages": "Available in languages",
     "genres": "Subjects",
     "uri": "URI",
-    "reconciliationUrl": "Reconciliation URL"
+    "reconciliationUrl": "Reconciliation URL",
+    "statusAvailable": "Available",
+    "statusUnavailable": "Unavailable",
+    "lastChecked": "Last checked"
   },
   "api": {
     "ServerError": "The terminology source is unavailable",
