feat: show reconciliation availability for all sources
- Display reconciliation info for all terminology sources, not just those with URLs
- Show "Available at the source" message when reconciliation URL is not provided
- Add translations for reconciliation labels in EN and NL

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,7 +77,9 @@
     "availableInLanguages": "Available in languages",
     "genres": "Subjects",
     "uri": "URI",
+    "reconciliation": "Reconciliation",
     "reconciliationUrl": "Reconciliation URL",
+    "reconciliationAvailableAtSource": "Available at the source",
     "statusAvailable": "Available",
     "statusUnavailable": "Unavailable",
     "lastChecked": "Last checked"
